[gd_scene load_steps=4 format=3 uid="uid://b38ahvb18k30c"]

[ext_resource type="Script" uid="uid://sok6fl3pevtu" path="res://Scenes/GUI/Menu/ingame_options_menu.gd" id="1_hasj5"]
[ext_resource type="Shader" uid="uid://bgg3px0xb2bvc" path="res://Scenes/GUI/Menu/ingame_options_menu.gdshader" id="2_3c0rl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_783ax"]
shader = ExtResource("2_3c0rl")
shader_parameter/blur_radius = 1.0
shader_parameter/blur_amount = 1.0
shader_parameter/blur_inner = 0.6
shader_parameter/blur_outer = 0.66

[node name="Options_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hasj5")

[node name="Panel" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_783ax")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Vol_label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"
horizontal_alignment = 1

[node name="Volume" type="HSlider" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -25.0
max_value = 25.0

[node name="Mute" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Mute"

[node name="FullscreenButton" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Fullscreen"

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[connection signal="drag_ended" from="Panel/MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_drag_ended"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="Panel/MarginContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="toggled" from="Panel/MarginContainer/VBoxContainer/FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
